Add linked text highlighting, condense recommended setup section
Thanks for the braintrust, @cthulahoops and @will-morningstar

Co-authored-by: cthulahoops <adam@cthulahoops.org>
Co-authored-by: will-morningstar <mxwillmorningstar@gmail.com>

--- a/docs/components/ALKiln/intro.mdx
+++ b/docs/components/ALKiln/intro.mdx
@@ -14,7 +14,7 @@ Welcome to the ALKiln testing framework! It helps you check that your docassembl
 
 **Any basic docassemble package can use ALKiln**.[^basic] ALKiln (Assembly Line Kiln) took its name from where it was born - the AssemblyLine project - but it can be used with any docassemble project.<!-- It does come with features that are especially useful for AssemblyLine users.-->
 
-🚧 ALKiln is under very active development. Give us feedback and suggest ideas by opening issues at https://github.com/SuffolkLITLab/ALKiln/issues.
+ALKiln's development moves a little slowly due to limited capacity, but we continue to develop ALKiln as we hear from authors. Give us feedback and suggest ideas by opening issues at https://github.com/SuffolkLITLab/ALKiln/issues.
 
 
 ## Quick start {#quickstart}
