Update in-page anchors and their styles to match setup

--- a/docs/components/ALKiln/automated_testing.mdx
+++ b/docs/components/ALKiln/automated_testing.mdx
@@ -1207,7 +1207,7 @@ If you are using a story table with index variables or generic objects, you need
 
 ([Moving](writing_tests.mdx#special-html))
 
-Add exactly this code to your `default screen parts` block to insert an invisible element in all your screens<Anchor id="trigger_variable_code"/>:
+<Anchor id="trigger_variable_code">Add exactly this code to your `default screen parts` block to insert an invisible element in all your screens:</Anchor>
 
 ```yml
 default screen parts:
