ALKiln constrained random answers are only on GitHub

--- a/docs/components/ALKiln/writing_tests.mdx
+++ b/docs/components/ALKiln/writing_tests.mdx
@@ -1387,6 +1387,8 @@ This Step can help humans keep track of what page the tests are on. It will also
 
 ## Make constrained random tests {#constrained_random}
 
+*Only for GitHub tests at the moment.*
+
 You can make template `.feature` files that each generate multiple tests with different combinations of answers. On GitHub, generated tests will be in your GitHub artifacts folder. You can download them and copy them into your test suite if you want. 
 
 <details>
