Reactivate volunteer signups, focus on organizer role

--- a/docs/volunteer.mdx
+++ b/docs/volunteer.mdx
@@ -5,17 +5,21 @@ sidebar_label: Volunteer
 slug: volunteer
 ---
 
-We would love your help building and maintaining the guided interviews on [Court Forms Online](https://courtformsonline.org/)!
+import { VolunteerFormLink } from '/docs/react_components/VolunteerFormLink.jsx';
 
-:::note
-We’ve had an amazing response to our posting and we have all the volunteers we can handle right now. If you submit [the form at this link](https://apps.suffolklitlab.org/interview?i=docassemble.DALVolunteerSignup:main.yml), we will add you to our volunteer list and get in touch when we are ready to take on more volunteers.
+This volunteer program aims to train and organize volunteers to build, translate, test, and maintain digital guided forms that everyday people can use to fill out critical legal forms online. You can see some of these on [Court Forms Online](https://courtformsonline.org/). We would love your help!
+
+:::info[**Updates**]
+Thanks for the great response! We are now focusing on the "volunteer organizing" team to help expand the program. For all other roles, you can still submit the form and we will reach out when we can take on more volunteers in those positions.
 :::
 
-<a class="button button--primary" disabled target="_blank" style={{'--ifm-button-size-multiplier': '1.25', fontWeight: 'normal', textDecoration: 'none'}} href="https://apps.suffolklitlab.org/interview?i=docassemble.DALVolunteerSignup:main.yml">Sign up to volunteer<svg width="13.5" height="13.5" aria-hidden="true" viewBox="0 0 24 24" class="iconExternalLink_nPIU"><path fill="currentColor" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"></path></svg></a>
+<VolunteerFormLink/>
+
 ## Volunteer opportunities
 
-There are several volunteer teams you can join:
+You can join one or more of several volunteer teams:
 
+* [Volunteer organizing.](#volunteer-organizing) Strengthen our volunteer organizing efforts.
 * [Updates.](#interview-updates) Help us work through our backlog of interview improvements and updates.
 * [Testing.](#user-testing) Test interviews and create issue reports to help us make improvements and updates.
 * [Translation.](#translation) Review translations for accuracy.
@@ -23,9 +27,15 @@ There are several volunteer teams you can join:
 
 All volunteer work is done remotely, and all training, meetings, and communication happen online, via Zoom, Microsoft Teams, and GitHub.
 
+### Volunteer organizing
+
+We plan for the volunteer organizing team to recruit, onboard, organize, and assess strengths and obstacles for the volunteer program. We could use folks with good communication and coordination skills, the ability to work independently, and the ability to track status and progress of projects and volunteers. In addition, we will need some volunteers to have comfort with one or more of the following tools: Email, Zoom, Microsoft Teams, Slack, project boards, spreadsheets, and GitHub.
+
+Volunteer organizing is an ongoing project and you can participate when you are able. We also encourage you to think about how this role fits with your current commitments.
+
 ### Interview updates
 
-Update interviews from a backlog of tasks. This involves coding in Docassemble, but **no coding experience is necessary to join this team**. we will teach you everything you need to get started and support you with regular check-ins. You just need to be willing to learn!
+Update interviews from a backlog of tasks. This involves coding in Docassemble, but **no coding experience is necessary to join this team**. We will teach you everything you need to get started and support you with regular check-ins. You just need to be willing to learn!
 
 Updating interviews is an ongoing project, and the updates team requires a long-term commitment. Volunteers should be able to commit at least 5–10 hours per month for at least 3 months.
 
@@ -61,12 +71,12 @@ Also, let us know if you need something else to work on.
 
 ## Sign up to volunteer
 
-:::note
-We’ve had an amazing response to our posting and we have all the volunteers we can handle right now. If you submit [the form at this link](https://apps.suffolklitlab.org/interview?i=docassemble.DALVolunteerSignup:main.yml), we will add you to our volunteer list and get in touch when we are ready to take on more volunteers.
+:::info
+Thanks for the great response! We are now focusing on the "volunteer organizing" team to help expand the program. For all other roles, you can still submit the form and we will reach out when we can take on more volunteers in those positions.
 :::
 
 <div style={{opacity: 0.65}}>
 Click the button and fill out a brief volunteer interest form:
 </div>
 
-<a class="button button--primary" disabled target="_blank" style={{'--ifm-button-size-multiplier': '1.25', fontWeight: 'normal', textDecoration: 'none'}} href="https://apps.suffolklitlab.org/interview?i=docassemble.DALVolunteerSignup:main.yml">Sign to volunteer<svg width="13.5" height="13.5" aria-hidden="true" viewBox="0 0 24 24" class="iconExternalLink_nPIU"><path fill="currentColor" d="M21 13v10h-21v-19h12v2h-10v15h17v-8h2zm3-12h-10.988l4.035 4-6.977 7.07 2.828 2.828 6.977-7.07 4.125 4.172v-11z"></path></svg></a>
+<VolunteerFormLink/>
